importing generic types and invoking generic instance methonds kind of works now

--- a/doc/bonsai.tex
+++ b/doc/bonsai.tex
@@ -375,7 +375,7 @@ list .Item= 3 5
   -> [ 1 2 3 5 ]
 \end{code}
 
-Notă: binder-ul caută metode și proprietăți atât statice cât și non-statice, ale instanței. 
+Notă: binder-ul caută doar metode și proprietăți non-statice, ale instanței. Apelul membrilor statici va fi prezentat în capitolul \ref{ch:IntegratingWithDotNet}.
 
 \section{Tratarea tipurilor de date primitive}\label{ch:runtime_sec:primitives}
 
